--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
 
     <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="${AIzaSyA7HcIR1dY-1gD_u74i8a3aEPTtXvGqV5Q}" />
+        android:value="$AIzaSyA7HcIR1dY-1gD_u74i8a3aEPTtXvGqV5Q" />
 
 
 </manifest>
