--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,12 @@
         <activity
             android:name=".MainView"
             android:screenOrientation="landscape"
-            android:label="@string/title_activity_main_view"
-            android:theme="@style/Theme.TP2INF8405.NoActionBar"></activity>
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:label="@string/title_activity_main_view">
+        </activity>
         <activity android:name=".SplashActivity"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,6 +47,7 @@
         <activity
             android:name=".MapsActivity"
             android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:label="@string/title_activity_maps">
 
             <!-- <intent-filter> -->
