ajout modification photos dans la gestion du profil ajout liens de parenté dans le manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TP2INF8405">
-        <activity
-            android:name=".UserProfileActivity"
-            android:screenOrientation="landscape"></activity>
+
         <activity
             android:name=".SplashActivity"
             android:screenOrientation="landscape"
@@ -39,17 +37,25 @@
         </activity>
         <activity
             android:name=".UserFirstPageActivity"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="landscape">
+
+        </activity>
         <activity
             android:name=".UserCreateAccountActivity"
-            android:screenOrientation="landscape"></activity>
-        <!--
-        <activity
-            android:name=".UserLoginActivity"
             android:screenOrientation="landscape"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+            android:parentActivityName=".UserFirstPageActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".UserFirstPageActivity"/>
         </activity>
-        -->
+        <activity
+            android:name=".UserProfileActivity"
+            android:screenOrientation="landscape"
+            android:parentActivityName=".MapsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MapsActivity"/>
+        </activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -66,11 +72,12 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"
             android:screenOrientation="landscape"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:parentActivityName=".UserFirstPageActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".UserFirstPageActivity"/>
 
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-            <!-- </intent-filter> -->
         </activity>
     </application>
 
