Language change fonctionnel

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,9 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        resConfigs "fr_FR", "en"
+
     }
 
     buildTypes {
